horizontal scroll fixe

--- a/RR-Front/src/app/dashboard/components/renewal-contract-scope/renewal-contract-scope.component.scss
+++ b/RR-Front/src/app/dashboard/components/renewal-contract-scope/renewal-contract-scope.component.scss
@@ -81,7 +81,7 @@
   display:flex;
   justify-content: space-between;
   border-top: 4px solid #0700cf;
-  width:35%;
+  width:310px;
   font-size: 20px;
   font-weight: bold;
   padding:15px;
